# proto/generated/vehicle.swagger.json
@@ -12,47 +12,6 @@
   ],
   "paths": {
     "/v1/vehicle": {
-      "get": {
-        "summary": "차량 리스트",
-        "operationId": "VehicleService_ListVehicle",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/generatedVehicles"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "vin",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "number",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "VehicleService"
-        ]
-      },
       "post": {
         "summary": "차량 등록",
         "operationId": "VehicleService_RegisterVehicle",
@@ -108,7 +67,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           }
         ],
         "tags": [
@@ -137,7 +97,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           }
         ],
         "tags": [
@@ -151,7 +112,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/generatedVehicle"
+              "properties": {}
             }
           },
           "default": {
@@ -166,14 +127,15 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "body",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/generatedVehicleID"
+              "$ref": "#/definitions/generatedUpdateVehicleRequest"
             }
           }
         ],
@@ -195,6 +157,27 @@
         },
         "number": {
           "type": "string"
+        }
+      }
+    },
+    "generatedUpdateVehicleRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "vin": {
+          "type": "string"
+        },
+        "number": {
+          "type": "string"
+        },
+        "status": {
+          "$ref": "#/definitions/generatedVehicleStatus"
         }
       }
     },
@@ -225,14 +208,6 @@
         }
       }
     },
-    "generatedVehicleID": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        }
-      }
-    },
     "generatedVehicleStatus": {
       "type": "string",
       "enum": [
@@ -242,18 +217,7 @@
         "STREAM_ERROR"
       ],
       "default": "UNKNOWN",
-      "title": "- UNKNOWN: 기본값\n - SUCCESS: 수집 성공\n - MESSAGE_ERROR: 메시지 포멧 에러\n - STREAM_ERROR: Message Queue 통신 에러"
-    },
-    "generatedVehicles": {
-      "type": "object",
-      "properties": {
-        "vehicles": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/generatedVehicle"
-          }
-        }
-      }
+      "title": "- UNKNOWN: 기본값\n - SUCCESS: 수집 성공\n - MESSAGE_ERROR: 단말기 장착\n - STREAM_ERROR: Message Queue 통신 에러"
     },
     "protobufAny": {
       "type": "object",
